objects/CMPL123CME__MedDRA_Release__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Transaction_ID__c</fullName>
        <description>Used to store an unique ID</description>
        <label>Transaction ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__null_Field1__c</fullName>
        <label>Null Field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__null_field2__c</fullName>
        <label>Null Field2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__null_field3__c</fullName>
        <label>Null Field3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__release_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>Release Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MedDRA Release</label>
    <nameField>
        <label>Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA Release</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__Language_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__language__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__language__c</errorDisplayField>
        <errorMessage>Please fill the required field - Language.</errorMessage>
    </validationRules>
</CustomObject>